# robot_eyes

./: .gitignore  README.md  install_script.sh
1_icp/: README.txt  icp.m  main.m  rms.m
1_icp/matlab/: createfilename.m  icp.m  readPcd.m
1_icp/python/: icp.py  main.py  readpcd.py  utils.py
cpp/: CMakeLists.txt  threedee.cpp
paper_auke_chiel/: adaptive_background.tex  presentation.tex
python/: eightpoint.py  icp.py  main.py  nn.py  parallel_queue.py  plot.py  pretty_plotter.py  sfm.py  threedee.py  utils.py
python/pklfiles/: benchmark.pkl
